--- a/frontend/src/app/profile/profile.component.html
+++ b/frontend/src/app/profile/profile.component.html
@@ -7,19 +7,111 @@
   hidden="true"
   type="file"
   id="file"
-  (change)="handleFileInput($event.target.files)"
+  (change)="handlePaperInput($event.target.files)"
 />
 <button mat-flat-button color="primary" (click)="fileInput.click()">
-  Choose XML file
+  Select XML file
 </button>
 <mat-chip-list *ngIf="paper">
-  <mat-chip [removable]="true" (removed)="remove()">
+  <mat-chip [removable]="true" (removed)="removePaper()">
     {{ paper.name }}
     <mat-icon matChipRemove>cancel</mat-icon></mat-chip
   >
 </mat-chip-list>
+
+<input
+  #file2Input
+  hidden="true"
+  type="file"
+  id="file2"
+  (change)="handleCoverLetterInput($event.target.files)"
+/>
+<button mat-flat-button color="primary" (click)="file2Input.click()">
+  Select cover letter
+</button>
+<mat-chip-list *ngIf="coverLetter">
+  <mat-chip [removable]="true" (removed)="removeCoverLetter()">
+    {{ coverLetter.name }}
+    <mat-icon matChipRemove>cancel</mat-icon></mat-chip
+  >
+</mat-chip-list>
+
+<input
+  #file3Input
+  hidden="true"
+  type="file"
+  id="file3"
+  (change)="handleRdfInput($event.target.files)"
+/>
+<button mat-flat-button color="primary" (click)="file3Input.click()">
+  Select RDF
+</button>
+<mat-chip-list *ngIf="rdf">
+  <mat-chip [removable]="true" (removed)="removeRdf()">
+    {{ rdf.name }}
+    <mat-icon matChipRemove>cancel</mat-icon></mat-chip
+  >
+</mat-chip-list>
+
 <div>
   <button mat-raised-button color="primary" (click)="uploadFile()">
     Upload
   </button>
 </div>
+
+<table mat-table [dataSource]="userPapers" class="mat-elevation-z8">
+  <ng-container matColumnDef="title">
+    <th mat-header-cell *matHeaderCellDef>Title</th>
+    <td mat-cell *matCellDef="let element">{{ element.title }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="status">
+    <th mat-header-cell *matHeaderCellDef>Status</th>
+    <td mat-cell *matCellDef="let element">
+      {{ element.status }}
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="archive">
+    <th mat-header-cell *matHeaderCellDef>Archive</th>
+    <td mat-cell *matCellDef="let element">
+      <button
+        *ngIf="element.status === 'waiting'"
+        mat-stroked-button
+        color="warn"
+        (click)="archive(element.title)"
+      >
+        Archive
+      </button>
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="preview">
+    <th mat-header-cell *matHeaderCellDef>Preview</th>
+    <td mat-cell *matCellDef="let element">
+      <button
+        mat-stroked-button
+        color="primary"
+        (click)="preview(element.title)"
+      >
+        Preview
+      </button>
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="pdf">
+    <th mat-header-cell *matHeaderCellDef>PDF</th>
+    <td mat-cell *matCellDef="let element">
+      <button
+        mat-stroked-button
+        color="primary"
+        (click)="downloadPdf(element.title)"
+      >
+        PDF
+      </button>
+    </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+</table>
