--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -8,5 +8,8 @@
     >
       {{ link.label }}
     </button>
+    <button mat-button *ngIf="isLoggedIn" (click)="logout()">
+      Logout
+    </button>
   </mat-toolbar-row>
 </mat-toolbar>
