--- a/frontend/src/app/profile/profile.component.html
+++ b/frontend/src/app/profile/profile.component.html
@@ -1,59 +1,57 @@
-<div class="profile">
-  <button mat-raised-button color="primary" (click)="logout()">Logout</button>
+<div class="flex-center">
+  <input
+    #fileInput
+    hidden="true"
+    type="file"
+    id="file"
+    (change)="handlePaperInput($event.target.files)"
+  />
+  <button mat-flat-button color="primary" (click)="fileInput.click()">
+    Select XML file
+  </button>
+  <mat-chip-list *ngIf="paper">
+    <mat-chip [removable]="true" (removed)="removePaper()">
+      {{ paper.name }}
+      <mat-icon matChipRemove>cancel</mat-icon></mat-chip
+    >
+  </mat-chip-list>
+
+  <input
+    #file2Input
+    hidden="true"
+    type="file"
+    id="file2"
+    (change)="handleCoverLetterInput($event.target.files)"
+  />
+  <button mat-flat-button color="primary" (click)="file2Input.click()">
+    Select cover letter
+  </button>
+  <mat-chip-list *ngIf="coverLetter">
+    <mat-chip [removable]="true" (removed)="removeCoverLetter()">
+      {{ coverLetter.name }}
+      <mat-icon matChipRemove>cancel</mat-icon></mat-chip
+    >
+  </mat-chip-list>
+
+  <input
+    #file3Input
+    hidden="true"
+    type="file"
+    id="file3"
+    (change)="handleRdfInput($event.target.files)"
+  />
+  <button mat-flat-button color="primary" (click)="file3Input.click()">
+    Select RDF
+  </button>
+  <mat-chip-list *ngIf="rdf">
+    <mat-chip [removable]="true" (removed)="removeRdf()">
+      {{ rdf.name }}
+      <mat-icon matChipRemove>cancel</mat-icon></mat-chip
+    >
+  </mat-chip-list>
 </div>
 
-<input
-  #fileInput
-  hidden="true"
-  type="file"
-  id="file"
-  (change)="handlePaperInput($event.target.files)"
-/>
-<button mat-flat-button color="primary" (click)="fileInput.click()">
-  Select XML file
-</button>
-<mat-chip-list *ngIf="paper">
-  <mat-chip [removable]="true" (removed)="removePaper()">
-    {{ paper.name }}
-    <mat-icon matChipRemove>cancel</mat-icon></mat-chip
-  >
-</mat-chip-list>
-
-<input
-  #file2Input
-  hidden="true"
-  type="file"
-  id="file2"
-  (change)="handleCoverLetterInput($event.target.files)"
-/>
-<button mat-flat-button color="primary" (click)="file2Input.click()">
-  Select cover letter
-</button>
-<mat-chip-list *ngIf="coverLetter">
-  <mat-chip [removable]="true" (removed)="removeCoverLetter()">
-    {{ coverLetter.name }}
-    <mat-icon matChipRemove>cancel</mat-icon></mat-chip
-  >
-</mat-chip-list>
-
-<input
-  #file3Input
-  hidden="true"
-  type="file"
-  id="file3"
-  (change)="handleRdfInput($event.target.files)"
-/>
-<button mat-flat-button color="primary" (click)="file3Input.click()">
-  Select RDF
-</button>
-<mat-chip-list *ngIf="rdf">
-  <mat-chip [removable]="true" (removed)="removeRdf()">
-    {{ rdf.name }}
-    <mat-icon matChipRemove>cancel</mat-icon></mat-chip
-  >
-</mat-chip-list>
-
-<div>
+<div class="flex-center">
   <button mat-raised-button color="primary" (click)="uploadFile()">
     Upload
   </button>
