--- a/frontend/src/app/editor-functions/editor-functions.component.css
+++ b/frontend/src/app/editor-functions/editor-functions.component.css
@@ -1,10 +1,16 @@
-.mat-cell {
+.mat-cell,
+.mat-header-cell {
   padding-left: 20px;
   padding-right: 20px;
 }
-mat-tab-group {
-  width: 60%;
+
+.mat-header-cell {
+  text-align: center;
+}
+
+.mat-table {
   margin-top: 50px;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 50px;
 }
