--- a/frontend/src/app/profile/profile.component.html
+++ b/frontend/src/app/profile/profile.component.html
@@ -77,7 +77,7 @@
         *ngIf="element.status === 'waiting'"
         mat-stroked-button
         color="warn"
-        (click)="archive(element.title)"
+        (click)="archive(element)"
       >
         Archive
       </button>
@@ -97,16 +97,18 @@
     </td>
   </ng-container>
 
-  <ng-container matColumnDef="pdf">
-    <th mat-header-cell *matHeaderCellDef>PDF</th>
+  <ng-container matColumnDef="download">
+    <th mat-header-cell *matHeaderCellDef>Download</th>
     <td mat-cell *matCellDef="let element">
-      <button
-        mat-stroked-button
-        color="primary"
-        (click)="downloadPdf(element.title)"
-      >
-        PDF
+      <button mat-button [matMenuTriggerFor]="menu">
+        <mat-icon>
+          get_app
+        </mat-icon>
       </button>
+      <mat-menu #menu="matMenu">
+        <button mat-menu-item (click)="downloadXml(element.title)">XML</button>
+        <button mat-menu-item (click)="downloadPdf(element.title)">PDF</button>
+      </mat-menu>
     </td>
   </ng-container>
 
