--- a/frontend/src/app/reviewer-functions/reviewer-functions.component.html
+++ b/frontend/src/app/reviewer-functions/reviewer-functions.component.html
@@ -41,15 +41,28 @@
     </td>
   </ng-container>
 
-  <ng-container matColumnDef="acceptOrReject">
-    <th mat-header-cell *matHeaderCellDef>Accept/Reject</th>
+  <ng-container matColumnDef="status">
+    <th mat-header-cell *matHeaderCellDef>Status</th>
     <td mat-cell *matCellDef="let element">
-      <button mat-stroked-button [matMenuTriggerFor]="menu">Select</button>
+      {{ element.status }}
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="acceptOrReject">
+    <th mat-header-cell *matHeaderCellDef>Action</th>
+    <td mat-cell *matCellDef="let element">
+      <button
+        *ngIf="element.status === 'waiting'"
+        mat-button
+        [matMenuTriggerFor]="menu"
+      >
+        <mat-icon>settings</mat-icon>
+      </button>
       <mat-menu #menu="matMenu">
-        <button mat-menu-item (click)="accept(element.title)">
+        <button mat-menu-item (click)="accept(element)">
           Accept
         </button>
-        <button mat-menu-item (click)="reject(element.title)">
+        <button mat-menu-item (click)="reject(element)">
           Reject
         </button>
       </mat-menu>
