--- a/frontend/src/app/select-reviewers-dialog/select-reviewers-dialog.component.css
+++ b/frontend/src/app/select-reviewers-dialog/select-reviewers-dialog.component.css
@@ -17,3 +17,10 @@
   margin-left: 10px;
   margin-right: 10px;
 }
+
+.flex-center {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  display: flex;
+  justify-content: center;
+}
