--- a/frontend/src/app/profile/profile.component.html
+++ b/frontend/src/app/profile/profile.component.html
@@ -60,13 +60,13 @@
 <table mat-table [dataSource]="userPapers" class="mat-elevation-z8">
   <ng-container matColumnDef="title">
     <th mat-header-cell *matHeaderCellDef>Title</th>
-    <td mat-cell *matCellDef="let element">{{ element.title }}</td>
+    <td mat-cell *matCellDef="let element">{{ element.paperTitle }}</td>
   </ng-container>
 
   <ng-container matColumnDef="status">
     <th mat-header-cell *matHeaderCellDef>Status</th>
     <td mat-cell *matCellDef="let element">
-      {{ element.status }}
+      {{ element.paperStatus }}
     </td>
   </ng-container>
 
@@ -74,7 +74,7 @@
     <th mat-header-cell *matHeaderCellDef>Archive</th>
     <td mat-cell *matCellDef="let element">
       <button
-        *ngIf="element.status === 'waiting'"
+        *ngIf="element.paperStatus === 'waiting'"
         mat-stroked-button
         color="warn"
         (click)="archive(element)"
@@ -90,7 +90,7 @@
       <button
         mat-stroked-button
         color="primary"
-        (click)="preview(element.title)"
+        (click)="preview(element.paperTitle)"
       >
         Preview
       </button>
@@ -106,8 +106,8 @@
         </mat-icon>
       </button>
       <mat-menu #menu="matMenu">
-        <button mat-menu-item (click)="downloadXml(element.title)">XML</button>
-        <button mat-menu-item (click)="downloadPdf(element.title)">PDF</button>
+        <button mat-menu-item (click)="downloadXml(element.paperTitle)">XML</button>
+        <button mat-menu-item (click)="downloadPdf(element.paperTitle)">PDF</button>
       </mat-menu>
     </td>
   </ng-container>
