--- a/frontend/src/app/reviewer-functions/reviewer-functions.component.html
+++ b/frontend/src/app/reviewer-functions/reviewer-functions.component.html
@@ -25,7 +25,7 @@
 <table mat-table [dataSource]="papersForReview" class="mat-elevation-z8">
   <ng-container matColumnDef="title">
     <th mat-header-cell *matHeaderCellDef>Title</th>
-    <td mat-cell *matCellDef="let element">{{ element.title }}</td>
+    <td mat-cell *matCellDef="let element">{{ element.paperTitle }}</td>
   </ng-container>
 
   <ng-container matColumnDef="preview">
@@ -44,7 +44,7 @@
   <ng-container matColumnDef="status">
     <th mat-header-cell *matHeaderCellDef>Status</th>
     <td mat-cell *matCellDef="let element">
-      {{ element.status }}
+      {{ element.paperStatus }}
     </td>
   </ng-container>
 
@@ -52,7 +52,7 @@
     <th mat-header-cell *matHeaderCellDef>Action</th>
     <td mat-cell *matCellDef="let element">
       <button
-        *ngIf="element.status === 'waiting'"
+        *ngIf="element.paperStatus === 'waiting'"
         mat-button
         [matMenuTriggerFor]="menu"
       >
