--- a/frontend/src/app/editor-functions/editor-functions.component.html
+++ b/frontend/src/app/editor-functions/editor-functions.component.html
@@ -56,7 +56,7 @@
           Publish
         </button>
         <button mat-menu-item (click)="reject(element)">
-          Reject
+          Archive
         </button>
       </mat-menu>
     </td>
