--- a/frontend/src/app/xml-edit/xml-edit.component.html
+++ b/frontend/src/app/xml-edit/xml-edit.component.html
@@ -6,6 +6,12 @@
   </div>
 
   <div class="flex-center">
+    <button mat-raised-button color="primary" (click)="save()">
+      Save
+    </button>
+  </div>
+  
+  <div class="flex-center">
     <div id="editor"></div>
   </div>
 </mat-card>
