Cover letter form added

--- a/frontend/src/app/cover-letter/cover-letter.component.html
+++ b/frontend/src/app/cover-letter/cover-letter.component.html
@@ -3,6 +3,9 @@
     <button mat-raised-button color="primary" (click)="openDialog()">
       Raw input
     </button>
+    <button mat-raised-button color="primary" (click)="save()">
+      Save
+    </button>
   </div>
 
   <div class="flex-center">
