--- a/frontend/src/app/reviewer-functions/reviewer-functions.component.html
+++ b/frontend/src/app/reviewer-functions/reviewer-functions.component.html
@@ -34,7 +34,7 @@
       <button
         mat-stroked-button
         color="primary"
-        (click)="preview(element.title)"
+        (click)="preview(element.paperTitle)"
       >
         Preview
       </button>
